# lang

./: .gitignore  Cargo.toml  README.md  run_tests.bat
analyze/: Cargo.toml
analyze/src/: arg_reorderer.rs  block.rs  block_analyzer.rs  block_visitor.rs  call_args.rs  context.rs  decl.rs  decl_analyzer.rs  decl_func.rs  decl_type.rs  decl_var.rs  defer.rs  defer_analyzer.rs  indexing.rs  indexing_analyzer.rs  lib.rs  method.rs  method_analyzer.rs  type_analyzer.rs  type_context.rs  type_converter.rs  type_inference.rs  type_inferencer.rs  type_solver.rs
analyze/src/decl/: adt.rs  block.rs  built_in.rs  func.rs  mod.rs  ty.rs  var.rs
analyze/src/mid/: defer.rs  generics.rs  method.rs  mod.rs  path_resolver.rs
analyze/src/post/: call_args.rs  clean_up.rs  exhaust.rs  fn_generics_check.rs  func_generics_check.rs  mod.rs  traits.rs  traits_fn.rs  traits_func.rs  traits_generic.rs  union_init_arg.rs
analyze/src/pre/: indexing.rs  method.rs  mod.rs
analyze/src/ty/: constraint_sets.rs  context.rs  converter.rs  fn_generics_check.rs  generic_adt_creator.rs  generic_collector.rs  generic_creator.rs  generic_fn_creator.rs  generic_func_creator.rs  generic_replace.rs  generic_struct_creator.rs  generic_structs.rs  generic_tys_solved.rs  inferencer.rs  mod.rs  solver.rs  substitution_sets.rs  traits_fn.rs
analyze/src/util/: order.rs
codegen/: Cargo.toml
common/: Cargo.toml
common/src/: empty_visitor.rs  error.rs  file.rs  iter.rs  lib.rs  path.rs  traverser.rs  type_info.rs  types.rs  util.rs  variable_type.rs  visitor.rs
common/src/ctx/: analyze_ctx.rs  ast_ctx.rs  block_ctx.rs  traverse_ctx.rs  ty_ctx.rs  ty_env.rs
common/src/token/: ast.rs  block.rs  expr.rs  lit.rs  mod.rs  op.rs  stmt.rs
common/src/traverse/: empty_visitor.rs  mod.rs  traverser.rs
common/src/ty/: environment.rs  generics.rs  inner_ty.rs  mod.rs  substitution_sets.rs  ty.rs
common/src/type/: generics.rs  ty.rs
compile/: Cargo.toml
crates/: Cargo.toml
crates/codegen/: Cargo.toml
crates/codegen/src/: block.rs  built_in.rs  decl.rs  expr.rs  generator.rs  lib.rs  op.rs  stmt.rs  util.rs
crates/common/: Cargo.toml
crates/common/src/: eq.rs  error.rs  hash.rs  hash_map.rs  hash_set.rs  iter.rs  lib.rs  order.rs  path.rs  util.rs
crates/common/src/ctx/: analyze_ctx.rs  ast_ctx.rs  block_ctx.rs  mod.rs  traverse_ctx.rs  ty_ctx.rs  ty_env.rs
crates/common/src/token/: ast.rs  block.rs  expr.rs  lit.rs  op.rs  stmt.rs
crates/common/src/traverse/: cf_traverser.rs  cf_visitor.rs  empty_visitor.rs  mod.rs  traverse_ctx.rs  traverser.rs  visitor.rs
crates/common/src/ty/: contains.rs  generics.rs  get.rs  inner_ty.rs  is.rs  mod.rs  precedence.rs  replace.rs  solve.rs  substitution_sets.rs  to_string.rs  ty.rs  ty_env.rs  ty_interner.rs  type_id.rs
crates/compile/: Cargo.toml
crates/compile/src/: compiler.rs  main.rs
crates/ir_builder/: Cargo.toml
crates/ir_builder/src/: builder.rs  lib.rs  state.rs
crates/ir_builder/src/collect/: adt.rs  ext.rs  func.rs  global.rs  local.rs  mod.rs  param.rs
crates/parse/: Cargo.toml
crates/parse/src/: expr_parser.rs  keyword_parser.rs  lib.rs  parser.rs  token.rs  type_parser.rs
examples/: fib_iterative.ren  fib_iterative_1.ren  fib_iterative_4.ren  fib_recursive.ren  fib_recursive_1.ren  fib_recursive_4.ren  lang_example.ren  lang_new.ren
lex/: Cargo.toml
parse/: Cargo.toml
path_tests/: abc_def.ren  main.ren
scripts/: generate_primitives.py  run_tests.bat
src/: error.rs  lexer.rs  main.rs  token.rs  token_iter.rs
std/: as_view.ren  assert.ren  cmp.ren  disposable.ren  either.ren  eq.ren  hash.ren  input.ren  list.ren  math.ren  mem.ren  mem_new.ren  nullable.ren  optional.ren  primitives.ren  print.ren  result.ren  string.ren  string_view.ren  traits.ren  types.ren
test_data/: class1.ren  class2.ren  class3.ren  expr10.ren  expr11.ren  expr12.ren  expr4.ren  expr5.ren  expr6.ren  expr7.ren  expr8.ren  expr9.ren  for1.ren  if1.ren  if2.ren  if3.ren  issue1.ren  issue3.ren  issue7.ren  iterate1.ren  test1.incl  test1.ren  test10.incl  test10.ren  test11.ren  test12.incl  test12.ren  test13.ren  test13_1.ren  test13_2.ren  test14.incl  test14.ren  test15.incl  test15.ren  test16.incl  (+62 more)
(+470 files in other folders)
