[package]
name = "lang"
version = "0.1.0"
authors = ["Jonathan Matsson <jmatss@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }