[package]
name = "analyze"
version = "0.1.0"
authors = ["jmatss <jmatss@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
either = "1.6.1"

common = { path = "../common" }
parse = { path = "../parse" }