[package]
name = "common"
version = "0.1.0"
authors = ["jmatss <jmatss@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
either = "1.6.1"
log = "0.4.11"
env_logger = "0.7.1"
backtrace = "0.3.50"