[package]
name = "common"
version = "0.1.0"
authors = ["jmatss <jmatss@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.50"
either = "1.6.1"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.8.3"