[package]
name = "lang"
version = "0.1.0"
authors = ["jmatss <jmatss@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
log = "0.4.11"
env_logger = "0.7.1"
backtrace = "0.3.50"
clap = "2.33.3"

analyze = { path = "../analyze" }
codegen_llvm = { path = "../codegen_llvm" }
common = { path = "../common" }
lex = { path = "../lex" }
parse = { path = "../parse" }